# stl-issue-2289

./: .clang-format  CMakeLists.txt  main.cpp
